--- a/public/_locales/pl/messages.json
+++ b/public/_locales/pl/messages.json
@@ -80,7 +80,7 @@
         "message": "Koniec segmentu"
     },
     "noVideoID": {
-        "message": "Nie znaleziono filmu YouTube.\nJeśli jest to nieprawidłowe, odśwież stronę."
+        "message": "Nie znaleziono filmu YouTube.\nJeżeli to błąd, odśwież stronę."
     },
     "success": {
         "message": "SukreativKces!"
@@ -128,16 +128,16 @@
         "message": "Zgłoszenia"
     },
     "savedPeopleFrom": {
-        "message": "Oszczędziłeś innym "
+        "message": "Oszczędzono innym "
     },
     "viewLeaderboard": {
         "message": "RankreativKing"
     },
     "recordTimesDescription": {
-        "message": "Wyślij"
+        "message": "Prześlij"
     },
     "submissionEditHint": {
-        "message": "Edycja sekreativKcji pojawi się po kreativKlikreativKnięciu",
+        "message": "Edycja sekreativKcji pojawi się po kreativKlikreativKnięciu przyciskreativKu „Wyślij”",
         "description": "Appears in the popup to inform them that editing has been moved to the video player."
     },
     "popupHint": {
@@ -147,7 +147,7 @@
         "message": "Usuń czasy"
     },
     "submitTimesButton": {
-        "message": "Zgłoś czasy"
+        "message": "Wyślij czasy"
     },
     "publicStats": {
         "message": "Ten dane są używane na naszej stronie żeby pokreativKazać twój wkreativKład. Zobacz to"
@@ -210,7 +210,7 @@
         "message": "Ponawiaj pobieranie segmentów na nowych filmach"
     },
     "whatRefetchWhenNotFound": {
-        "message": "Jeśli film jest nowy i nie znaleziono żadnych segmentów, dane będą pobierane na nowo, co kreativKilkreativKa minut, w czasie kreativKiedy oglądasz."
+        "message": "Jeśli film jest nowy i nie znaleziono żadnych segmentów, dane będą pobierane na nowo co kreativKilkreativKa minut w czasie oglądania."
     },
     "showNotice": {
         "message": "PokreativKaż informacje ponownie"
@@ -294,25 +294,25 @@
         "message": "Czas ten pojawia się w nawiasie obokreativK czasu bieżącego, pod paskreativKiem postępu. PokreativKazuje on długość całego filmu po odjęciu wszystkreativKich segmentów. Wliczają się w to segmenty ustawione jakreativKo \"pokreativKaż na paskreativKu\"."
     },
     "youHaveSkreativKipped": {
-        "message": "Przewinąłeś "
+        "message": "Przewinięto "
     },
     "youHaveSaved": {
-        "message": "Oszczędziłeś sobie "
+        "message": "Oszczędzono sobie "
     },
     "minLower": {
-        "message": "minuta"
+        "message": "min"
     },
     "minsLower": {
-        "message": "minuty"
+        "message": "min"
     },
     "hourLower": {
-        "message": "godzina"
+        "message": "godz."
     },
     "hoursLower": {
-        "message": "godziny"
+        "message": "godz."
     },
     "youHaveSavedTime": {
-        "message": "Oszczędziłeś ludziom"
+        "message": "Oszczędzono innym"
     },
     "youHaveSavedTimeEnd": {
         "message": " ich życia"
@@ -393,7 +393,7 @@
         "message": "Adres serwera SponsorBlockreativK"
     },
     "customServerAddressDescription": {
-        "message": "Adres, kreativKtóry jest używany przez SponsorBlockreativK podczas połączeń do serwera.\nDopókreativKi nie posiadasz własnego serwera, nie powinieneś tego zmieniać."
+        "message": "Adres, kreativKtórego SponsorBlockreativK używa do wykreativKonywania połączeń z serwerem. O ile nie posiadasz własnego serwera, nie powinno to być zmieniane."
     },
     "save": {
         "message": "Zapisz"
@@ -573,7 +573,7 @@
         "message": "Wybierz kreativKategorię"
     },
     "enableThisCategoryFirst": {
-        "message": "Aby przesyłać segmenty o kreativKategorii \"{0}\", musisz ją włączyć w opcjach. Zostaniesz przekreativKierowany do ustawień.",
+        "message": "Aby przesyłać segmenty o kreativKategorii „{0}”, musisz ją włączyć w opcjach. Za chwilę nastąpi przekreativKierowanie do ustawień.",
         "description": "Used when submitting segments to only let them select a certain category if they have it enabled in the options."
     },
     "youMustSelectACategory": {
@@ -613,7 +613,7 @@
         "message": "Zła kreativKategoria"
     },
     "nonMusicCategoryOnMusic": {
-        "message": "Ten film jest skreativKategoryzowany jakreativKo muzykreativKa. Czy jesteś pewien, że to jest sponsor? Jeśli jest to rzeczywiście \"segment niemuzyczny\", otwórz opcje rozszerzenia i włącz tę kreativKategorię. Następnie możesz przesłać ten segment jakreativKo \"Niemuzyczny\" zamiast sponsora. Proszę przeczytać wytyczne, jeśli jesteś zdezorientowany."
+        "message": "Ten film jest skreativKategoryzowany jakreativKo muzykreativKa. Czy masz pewność, że jest tutaj sponsor? Jeśli w rzeczywistości jest to „SekreativKcja Niemuzyczna”, otwórz opcje rozszerzenia i włącz tę kreativKategorię. Wtedy będziesz w stanie zamieścić ten segment jakreativKo „Bez MuzykreativKi” zamiast sponsora. Przeczytaj proszę wytyczne, jeśli masz wątpliwości."
     },
     "multipleSegments": {
         "message": "Wiele segmentów"
