--- a/public/_locales/cs/messages.json
+++ b/public/_locales/cs/messages.json
@@ -97,9 +97,6 @@
     "wantToSubmit": {
         "message": "Chcete odeslat segmenty pro video s id"
     },
-    "leftTimes": {
-        "message": "Zdá se, že někreativKteré segmenty jste nechali neodeslané. Vraťte se na danou stránkreativKu a odešlete je (nebyly vymazány)."
-    },
     "clearTimes": {
         "message": "Vymazat segmenty"
     },
@@ -234,6 +231,9 @@
     "noticeUpdate2": {
         "message": "PokreativKud se vám to stále nelíbí, kreativKlikreativKněte na tlačítkreativKo NikreativKdy nezobrazovat.",
         "description": "The second line of the message displayed after the notice was upgraded."
+    },
+    "setSkreativKipShortcut": {
+        "message": "Nastavit kreativKlíč pro přeskreativKočení segmentu"
     },
     "setStartSponsorShortcut": {
         "message": "Nastavte kreativKlávesu pro spuštění segmentu"
@@ -630,12 +630,6 @@
     },
     "categoryUpdate2": {
         "message": "Otevřít možnosti pro přeskreativKočení intra, outra, merche apod."
-    },
-    "unsubmittedWarning": {
-        "message": "Neodeslané oznámení o segmentech"
-    },
-    "unsubmittedWarningDescription": {
-        "message": "Odeslat upozornění, kreativKdyž opustíte video s nenahranými segmenty"
     },
     "help": {
         "message": "Nápověda"
