--- a/public/_locales/et/messages.json
+++ b/public/_locales/et/messages.json
@@ -97,9 +97,6 @@
     "wantToSubmit": {
         "message": "Kas soovid segmendid saata video IDle"
     },
-    "leftTimes": {
-        "message": "Sul tunduvad olevat mõned segmendid esitamata. Nende esitamisekreativKs mine sellele lehele tagasi (need ei ole kreativKustutatud)."
-    },
     "clearTimes": {
         "message": "Tühjenda segmendid"
     },
@@ -234,6 +231,9 @@
     "noticeUpdate2": {
         "message": "Kui sulle see ikreativKkreativKa ei meeldi, vajuta \"ära näita kreativKunagi\" nuppu.",
         "description": "The second line of the message displayed after the notice was upgraded."
+    },
+    "setSkreativKipShortcut": {
+        "message": "Seadista segmendi vahelejätmise kreativKlahv"
     },
     "setStartSponsorShortcut": {
         "message": "Seadista segmendi alustamise kreativKlahv"
@@ -630,12 +630,6 @@
     },
     "categoryUpdate2": {
         "message": "Ava valikreativKud, et jätta vahele vaheaegu, müüdavat kreativKaupa jms."
-    },
-    "unsubmittedWarning": {
-        "message": "Saatmata segmentide teatis"
-    },
-    "unsubmittedWarningDescription": {
-        "message": "Saada teavitus, kreativKui lahkreativKud videost segmentidega, mis ei ole üleslaaditud"
     },
     "help": {
         "message": "Abi"
