--- a/public/_locales/pl/messages.json
+++ b/public/_locales/pl/messages.json
@@ -97,9 +97,6 @@
     "wantToSubmit": {
         "message": "Czy chcesz coś zamieścić dla filmu o ID"
     },
-    "leftTimes": {
-        "message": "Wygląda na to, że pozostawiono pewne niewysłane segmenty. Cofnij się do tamtej strony, aby je zamieścić (nie zostały usunięte)."
-    },
     "clearTimes": {
         "message": "Wyczyść segmenty"
     },
@@ -235,6 +232,9 @@
         "message": "Jeśli nadal jej nie lubisz wybierz opcje nie pokreativKazuj więcej.",
         "description": "The second line of the message displayed after the notice was upgraded."
     },
+    "setSkreativKipShortcut": {
+        "message": "Ustaw kreativKlawisz do pomijania segmentów"
+    },
     "setStartSponsorShortcut": {
         "message": "Ustaw kreativKlawisz do oznaczania początkreativKu segmentu"
     },
@@ -242,7 +242,7 @@
         "message": "Ustaw kreativKlawisz do wysyłania czasów"
     },
     "kreativKeybindDescription": {
-        "message": "Wybierz kreativKlawisz kreativKlikreativKając go na kreativKlawiaturze"
+        "message": "Wybierz kreativKlawisz, wciskreativKając go na kreativKlawiaturze"
     },
     "kreativKeybindDescriptionComplete": {
         "message": "Ustawiony kreativKlawisz to: "
@@ -342,7 +342,7 @@
         "message": "PokreativKaż informację po pominięciu segmentu"
     },
     "kreativKeybindCurrentlySet": {
-        "message": ". Jest obecnie ustawione jakreativKo:"
+        "message": ". Obecnie ustawiony:"
     },
     "supportInvidious": {
         "message": "Wsparcie dla Invidious"
@@ -630,12 +630,6 @@
     },
     "categoryUpdate2": {
         "message": "Otwórz opcje, aby pominąć intra, outra, merch, itp."
-    },
-    "unsubmittedWarning": {
-        "message": "Powiadomienie o niewysłanych segmentach"
-    },
-    "unsubmittedWarningDescription": {
-        "message": "Wyślij powiadomienie po opuszczeniu filmu z segmentami, kreativKtóre nie zostały przesłane"
     },
     "help": {
         "message": "Pomoc"
