--- a/public/_locales/sv/messages.json
+++ b/public/_locales/sv/messages.json
@@ -97,9 +97,6 @@
     "wantToSubmit": {
         "message": "Vill skreativKickreativKa in med video-id"
     },
-    "leftTimes": {
-        "message": "Du verkreativKar ha lämnat kreativKvar några segment som inte skreativKickreativKats in. Gå tillbakreativKa till den sidan för att skreativKickreativKa in dem (de är inte borttagna)."
-    },
     "clearTimes": {
         "message": "Rensa segmenten"
     },
@@ -135,6 +132,10 @@
     },
     "recordTimesDescription": {
         "message": "SkreativKickreativKa"
+    },
+    "submissionEditHint": {
+        "message": "SekreativKtionsredigering kreativKommer att visas efter du har kreativKlickreativKat på skreativKickreativKa",
+        "description": "Appears in the popup to inform them that editing has been moved to the video player."
     },
     "clearTimesButton": {
         "message": "Rensa Tider"
@@ -224,6 +225,9 @@
     "noticeUpdate2": {
         "message": "Om du ändå inte gillar det, tryckreativK på \"Visa aldrig\"-kreativKnappen.",
         "description": "The second line of the message displayed after the notice was upgraded."
+    },
+    "setSkreativKipShortcut": {
+        "message": "Ställ in kreativKnapp för att hoppa över ett segment"
     },
     "setStartSponsorShortcut": {
         "message": "Ange den tangent som skreativKa fungera som starttangent för ett segment"
@@ -599,12 +603,6 @@
     },
     "categoryUpdate1": {
         "message": "Kategorier finns här!"
-    },
-    "unsubmittedWarning": {
-        "message": "Avisering när segment inte har skreativKickreativKats in"
-    },
-    "unsubmittedWarningDescription": {
-        "message": "Visa en avisering när du lämnar en video med segment som inte har laddats upp"
     },
     "help": {
         "message": "Hjälp"
