New Crowdin updates (#624)

--- a/public/_locales/cs/messages.json
+++ b/public/_locales/cs/messages.json
@@ -97,9 +97,6 @@
     "wantToSubmit": {
         "message": "Chcete odeslat segmenty pro video s id"
     },
-    "leftTimes": {
-        "message": "Zdá se, že některé segmenty jste nechali neodeslané. Vraťte se na danou stránku a odešlete je (nebyly vymazány)."
-    },
     "clearTimes": {
         "message": "Vymazat segmenty"
     },
@@ -234,6 +231,9 @@
     "noticeUpdate2": {
         "message": "Pokud se vám to stále nelíbí, klikněte na tlačítko Nikdy nezobrazovat.",
         "description": "The second line of the message displayed after the notice was upgraded."
+    },
+    "setSkipShortcut": {
+        "message": "Nastavit klíč pro přeskočení segmentu"
     },
     "setStartSponsorShortcut": {
         "message": "Nastavte klávesu pro spuštění segmentu"
@@ -630,12 +630,6 @@
     },
     "categoryUpdate2": {
         "message": "Otevřít možnosti pro přeskočení intra, outra, merche apod."
-    },
-    "unsubmittedWarning": {
-        "message": "Neodeslané oznámení o segmentech"
-    },
-    "unsubmittedWarningDescription": {
-        "message": "Odeslat upozornění, když opustíte video s nenahranými segmenty"
     },
     "help": {
         "message": "Nápověda"
