--- a/public/_locales/ml/messages.json
+++ b/public/_locales/ml/messages.json
@@ -97,9 +97,6 @@
     "wantToSubmit": {
         "message": "വീഡിയോ ഐഡിക്ക് സമർപ്പിക്കാൻ നിങ്ങൾ ആഗ്രഹിക്കുന്നുണ്ടോ"
     },
-    "leftTimes": {
-        "message": "നിങ്ങൾ ചില സെഗ്‌മെന്റുകൾ സമർപ്പിച്ചിട്ടില്ലെന്ന് തോന്നുന്നു. അവ സമർപ്പിക്കുന്നതിന് ആ പേജിലേക്ക് മടങ്ങുക (അവ ഇല്ലാതാക്കില്ല)."
-    },
     "clearTimes": {
         "message": "സെഗ്‌മെന്റുകൾ മായ്‌ക്കുക"
     },
@@ -234,6 +231,9 @@
     "noticeUpdate2": {
         "message": "നിങ്ങൾക്ക് ഇപ്പോഴും ഇഷ്‌ടമായില്ലെങ്കിൽ, ഒരിക്കലും കാണിക്കരുത് ബട്ടൺ അമർത്തുക.",
         "description": "The second line of the message displayed after the notice was upgraded."
+    },
+    "setSkipShortcut": {
+        "message": "ഒരു സെഗ്മെന്റ് ഒഴിവാക്കുന്നതിനായി കീ സജ്ജമാക്കുക"
     },
     "setStartSponsorShortcut": {
         "message": "ആരംഭ സെഗ്‌മെന്റ് കീബൈൻഡിനായി കീ സജ്ജമാക്കുക"
@@ -630,12 +630,6 @@
     },
     "categoryUpdate2": {
         "message": "ആമുഖങ്ങൾ, ഉൽ‌പ്പന്നങ്ങൾ‌, ചരക്കുകൾ‌ മുതലായവ ഒഴിവാക്കുന്നതിനുള്ള ഓപ്ഷനുകൾ‌ തുറക്കുക."
-    },
-    "unsubmittedWarning": {
-        "message": "സമർപ്പിക്കാത്ത സെഗ്‌മെന്റുകളുടെ അറിയിപ്പ്"
-    },
-    "unsubmittedWarningDescription": {
-        "message": "അപ്‌ലോഡ് ചെയ്യാത്ത സെഗ്‌മെന്റുകളുള്ള ഒരു വീഡിയോ നിങ്ങൾ ഉപേക്ഷിക്കുമ്പോൾ ഒരു അറിയിപ്പ് അയയ്‌ക്കുക"
     },
     "help": {
         "message": "സഹായം"
