--- a/public/_locales/ta/messages.json
+++ b/public/_locales/ta/messages.json
@@ -97,9 +97,6 @@
     "wantToSubmit": {
         "message": "வீடியோ ஐடிக்கு நீங்கள் சமர்ப்பிக்க விரும்புகிறீர்களா"
     },
-    "leftTimes": {
-        "message": "நீங்கள் சில பிரிவுகளை சமர்ப்பிக்கவில்லை என்று தெரிகிறது. அவற்றைச் சமர்ப்பிக்க அந்தப் பக்கத்திற்குச் செல்லவும் (அவை நீக்கப்படவில்லை)."
-    },
     "clearTimes": {
         "message": "பிரிவுகளை அழிக்கவும்"
     },
@@ -234,6 +231,9 @@
     "noticeUpdate2": {
         "message": "உங்களுக்கு இன்னும் பிடிக்கவில்லை என்றால், ஒருபோதும் காண்பி பொத்தானை அழுத்தவும்.",
         "description": "The second line of the message displayed after the notice was upgraded."
+    },
+    "setSkipShortcut": {
+        "message": "ஒரு பகுதியைத் தவிர்ப்பதற்கான விசையை அமைக்கவும்"
     },
     "setStartSponsorShortcut": {
         "message": "தொடக்க பிரிவு விசைப்பலகைக்கு விசையை அமைக்கவும்"
@@ -630,12 +630,6 @@
     },
     "categoryUpdate2": {
         "message": "அறிமுகங்கள், அவுட்ரோஸ், மெர்ச் போன்றவற்றைத் தவிர்க்க விருப்பங்களைத் திறக்கவும்."
-    },
-    "unsubmittedWarning": {
-        "message": "சமர்ப்பிக்கப்படாத பிரிவுகளின் அறிவிப்பு"
-    },
-    "unsubmittedWarningDescription": {
-        "message": "பதிவேற்றப்படாத பிரிவுகளுடன் வீடியோவை விட்டு வெளியேறும்போது அறிவிப்பை அனுப்பவும்"
     },
     "help": {
         "message": "உதவி"
