--- a/public/_locales/te/messages.json
+++ b/public/_locales/te/messages.json
@@ -97,9 +97,6 @@
     "wantToSubmit": {
         "message": "మీరు వీడియో ఐడి కోసం సమర్పించాలనుకుంటున్నారా"
     },
-    "leftTimes": {
-        "message": "మీరు కొన్ని విభాగాలను సమర్పించకుండా వదిలేసినట్లు కనిపిస్తోంది. వాటిని సమర్పించడానికి ఆ పేజీకి తిరిగి వెళ్ళు (అవి తొలగించబడవు)."
-    },
     "clearTimes": {
         "message": "విభాగాలను క్లియర్ చేయండి"
     },
@@ -234,6 +231,9 @@
     "noticeUpdate2": {
         "message": "మీకు ఇంకా నచ్చకపోతే, ఎప్పుడూ చూపించు బటన్ నొక్కండి.",
         "description": "The second line of the message displayed after the notice was upgraded."
+    },
+    "setSkipShortcut": {
+        "message": "విభాగాన్ని దాటవేయడానికి కీని సెట్ చేయండి"
     },
     "setStartSponsorShortcut": {
         "message": "ప్రారంభ విభాగం కీబైండ్ కోసం కీని సెట్ చేయండి"
@@ -630,12 +630,6 @@
     },
     "categoryUpdate2": {
         "message": "పరిచయాలు, ros ట్రోస్, మెర్చ్ మొదలైనవాటిని దాటవేయడానికి ఎంపికలను తెరవండి."
-    },
-    "unsubmittedWarning": {
-        "message": "సమర్పించని విభాగాల నోటిఫికేషన్"
-    },
-    "unsubmittedWarningDescription": {
-        "message": "మీరు అప్‌లోడ్ చేయని విభాగాలతో వీడియోను వదిలివేసినప్పుడు నోటిఫికేషన్ పంపండి"
     },
     "help": {
         "message": "సహాయం"
