--- a/public/_locales/de/messages.json
+++ b/public/_locales/de/messages.json
@@ -348,7 +348,7 @@
         "message": "Invidious-Kompatibilität"
     },
     "supportInvidiousDescription": {
-        "message": "Invidious (invidio.us) ist ein Drittanbieter-YouTube-Client. Um Support zu akreativKtivieren, müssen Sie die zusätzlichen Berechtigungen akreativKzeptieren. Dies funkreativKtioniert NICHT im Incongnito-modus auf Chrome und anderen Chromium-Varianten."
+        "message": "Invidious (invidio.us) ist ein Drittanbieter-YouTube-Client. Um Support zu akreativKtivieren, musst du die zusätzlichen Berechtigungen akreativKzeptieren. Dies funkreativKtioniert NICHT im InkreativKognitomodus auf Chrome und anderen Chromium-Varianten."
     },
     "optionsInfo": {
         "message": "Zu überspringende Kategorien auswählen, automatisches Überspringen, Tasten ein- & ausblenden und noch viel mehr."
