--- a/public/_locales/es/messages.json
+++ b/public/_locales/es/messages.json
@@ -232,6 +232,9 @@
         "message": "Si aún no te gusta, pulsa el botón de nunca mostrar.",
         "description": "The second line of the message displayed after the notice was upgraded."
     },
+    "setSkipShortcut": {
+        "message": "Establecer clave para omitir un segmento"
+    },
     "setStartSponsorShortcut": {
         "message": "Establecer tecla para iniciar segmento"
     },
@@ -590,6 +593,9 @@
     },
     "adblockerIssue": {
         "message": "Parece que algo está bloqueando la capacidad de SponsorBlock para obtener datos de vídeo. Este es probablemente su bloqueador de anuncios. Por favor, compruebe https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
+    },
+    "adblockerIssueUnlistedVideosInfo": {
+        "message": "Si no puedes resolver esto, desactiva la configuración 'Ignorar vídeos no listados/privados', ya que SponsorBlock no puede recuperar la información de visibilidad de este vídeo"
     },
     "itCouldBeAdblockerIssue": {
         "message": "Si esto sigue ocurriendo, podría ser causado por tu bloqueador de anuncios. Por favor, compruebe https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Solicitudes"
