--- a/public/_locales/sk/messages.json
+++ b/public/_locales/sk/messages.json
@@ -221,7 +221,7 @@
         "description": "Used on Firefox Store Page"
     },
     "sourceCode": {
-        "message": "Zdrojový Kód",
+        "message": "Zdrojový kód",
         "description": "Used on Firefox Store Page"
     },
     "noticeUpdate": {
@@ -593,6 +593,9 @@
     },
     "adblockerIssue": {
         "message": "Zdá sa, že niečo blokuje SponsorBlocku možnosť získať dáta o videu. Pravdepodobne to bude Váš adblocker. Prosím navštívte https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
+    },
+    "adblockerIssueUnlistedVideosInfo": {
+        "message": "Ak to neviete vyriešiť, vypnite nastavenie \"Ignorovať nezaradené a súkromné videá\", lebo SponsorBlock nevie zistiť viditeľnosť tohto videa"
     },
     "itCouldBeAdblockerIssue": {
         "message": "Ak sa to bude diať aj naďalej, môže to byť spôsobené Vašim adblockerom. Prosím navštívte https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
