--- a/public/_locales/uk/messages.json
+++ b/public/_locales/uk/messages.json
@@ -594,6 +594,9 @@
     "adblockerIssue": {
         "message": "Здається, щось блокує можливість SponsorBlock'а отримувати дані про відео. Можливо, це ваш блокувальник реклами. Будь ласка, перейдіть на https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocker-Blocking-SponsorBlock's-Requests"
     },
+    "adblockerIssueUnlistedVideosInfo": {
+        "message": "Якщо вам не вдалося вирішити це, вимкніть параметр \"Ігнорувати непублічні відео\", оскільки SponsorBlock не в змозі отримати інформацію про видимість цього відео"
+    },
     "itCouldBeAdblockerIssue": {
         "message": "Якщо це повідомлення з'являється занадто часто, це може бути викликано вашим блокувальником реклами. Будь ласка, перейдіть на https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
     },
