--- a/public/_locales/zh_TW/messages.json
+++ b/public/_locales/zh_TW/messages.json
@@ -587,6 +587,9 @@
     "adblockerIssue": {
         "message": "似乎某些東西正在阻止 SponsorBlock 獲取影片資料的功能。它很可能是您的廣告攔截器。請查看 https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
     },
+    "adblockerIssueUnlistedVideosInfo": {
+        "message": "如果您沒辦法解決這個問題，請停用\"忽略私人或不公開影片\"，因為 SponsorBlock 無法獲取這部影片的可見性資料。"
+    },
     "itCouldBeAdblockerIssue": {
         "message": "如果這種情況不斷發生，它可能是由您的廣告攔截器引起的。請查看 https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
     },
